sidebar quote fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -145,3 +145,11 @@ body {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
 }
+
+.sidebar {
+  overflow: auto;
+}
+
+div::-webkit-scrollbar {
+  display: none;
+}
